<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_bold"
            android:gravity="center"
            android:padding="@dimen/_7sdp"
            android:text="@string/select_category"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrey300"
            android:visibility="gone" />

        <dreamguys.in.co.gigs.utils.CustomTextView
            android:id="@+id/tv_paypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/paypal"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGrey300" />

        <dreamguys.in.co.gigs.utils.CustomTextView
            android:id="@+id/tv_stripe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/stripe"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</android.support.v7.widget.CardView>