<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAppTheme"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp">

            <dreamguys.in.co.gigs.utils.CustomTextView
                android:id="@+id/tb_forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/title_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                app:fontName="@string/font_bold" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <dreamguys.in.co.gigs.utils.CustomEditext
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:fontName="@string/font_regular" />
            </android.support.design.widget.TextInputLayout>

            <dreamguys.in.co.gigs.utils.CustomButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_rectangular_green_shape"
                android:ems="8"
                android:gravity="center"
                android:onClick="submitForgot"
                android:padding="@dimen/_10sdp"
                android:text="@string/text_submit"
                android:textColor="@android:color/white"
                app:fontName="@string/font_bold" />

            <dreamguys.in.co.gigs.utils.CustomTextView
                android:id="@+id/tv_know_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/fpassword_info"
                android:textSize="@dimen/_10sdp"
                app:fontName="@string/font_regular" />

            <dreamguys.in.co.gigs.utils.CustomTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="goToLogin"
                android:padding="@dimen/_10sdp"
                android:text="@string/fpassword_login"
                android:textColor="@color/colorAppTheme"
                android:textSize="@dimen/_10sdp"
                app:fontName="@string/font_bold" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>