<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp"
    android:minHeight="@dimen/_150sdp"
    android:minWidth="@dimen/_500sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/font_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/select_status"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spin_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:entries="@array/order_status"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center" />

        <dreamguys.in.co.gigs.utils.CustomButton
            android:id="@+id/btn_select_ordr_status"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/button_rectangular_shape"
            android:text="@string/text_update"
            android:textColor="@android:color/white"
            app:fontName="@string/font_regular"
            android:layout_marginEnd="@dimen/_5sdp" />

    </LinearLayout>
</LinearLayout>